# Binaural-Beats-cpp

./: .gitignore  CMakeLists.txt  README.md
include/binaural/: audioDriver.hpp  eegPredictorInterface.hpp  gnauralParser.hpp  lockFreeQueue.hpp  parameterController.hpp  period.hpp  pinkNoise.hpp  sinTable.hpp  stubPredictor.hpp  synthesizer.hpp  voice.hpp  wavDriver.hpp  waveformBuffer.hpp
include/gui/: guiFonts.hpp  guiPanels.hpp  guiUtils.hpp  mainLoop.hpp
src/: audioDriverPortaudio.cpp  audioDriverStub.cpp  gnauralParser.cpp  main.cpp  mainGui.cpp  parameterController.cpp  pinkNoise.cpp  sinTable.cpp  stubPredictor.cpp  synthesizer.cpp  wavDriver.cpp  waveformBuffer.cpp
src/gui/: guiFonts.cpp  guiPanels.cpp  guiUtils.cpp  mainLoop.cpp
